2020-02-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_picture_object.c: Validate GedaObject in function
      geda_picture_object_get_height.

2020-02-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_transform.c: Add Doxygen group math-transform-proc.

    * src/object/o_get.c: Declare GedaObject argument a const:

          * geda_object_get_nearest_point

    * src/object/o_picture_object.c: Declare GedaObject argument a const:

          * geda_picture_object_get_filename
          * geda_picture_object_get_height
          * geda_picture_object_get_mask_data

2020-02-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_hatch.c: Add todo documentation template.

    * src/math/m_line.c: Add Doxygen group math-line-proc.

    * libgeda/src/math/m_math.c: Add Doxygen group math-general-proc.

    * libgeda/src/math/m_polygon.c: Add Doxygen group math-polygon-proc.

    * src/object/o_*_object.c: Declare GedaObject argument a const:

          * geda_path_object_get_nearest_point
          * geda_picture_object_get_nearest_point
          * geda_text_object_get_nearest_point

    * src/object/o_picture_object.c: Fix function geda_picture_object_scale;
      copy/paste error; box->picture.

2020-02-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_circle.c: Eliminate unnecessary function line wrapping and
      add Doxygen group math-circle-proc.

    * src/math/m_hatch.c: Add Doxygen group math-hatch-proc.

    * src/object/o_*_object.c: Declare GedaObject argument a const:

          * geda_arc_object_get_nearest_point
          * geda_box_object_get_nearest_point
          * geda_circle_object_get_nearest_point
          * geda_complex_object_get_nearest_point
          * geda_line_object_get_closest_endpoint
          * geda_line_object_get_nearest_point

2020-02-11 Wiley E. Hill <wileyhill@gmail.com>

    * include/libgeda/s_struct.h: Reorganize; move define LINE_END[1,2].
